@@ -116,6 +116,12 @@
             <script>
               changeBox(
                 "March",
+                "31",
+                "2023",
+                "Images are finally back to the correct position on the side of the text in article boxes!"
+              );
+              changeBox(
+                "March",
                 "30",
                 "2023",
                 'Added "Software" topic-Articles can now have more than one topic-Color of article box tags now changes when hovering to better convey that it is a link'
