@@ -57,3 +57,5 @@
     - Added "Software" topic
     - Articles can now have more than one topic
     - Color of article box tags now changes when hovering to better convey that it is a link
+03-31-2023 :
+    - Images are finally back to the correct position on the side of the text in article boxes!
